docs: Complete project audit and repository cleanup
- Create comprehensive PROJECT_AUDIT.md as reference guide
- Update Kubernetes documentation to reflect cloud integration
- Add detailed exploration of local K8s integration options
- Complete cloud setup scripts documentation
- Add cleanup scripts for temporary files
- Fix missing generate_cd_secrets.sh script
- Update roadmap with current project status
- Enhance CI/CD documentation for clarity
- Polish overall repository structure

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -20,6 +20,11 @@ on:
         description: 'Version tag to deploy (defaults to "latest")'
         required: false
         type: string
+      real_deployment:
+        description: 'Force real deployment mode (requires Kubernetes configs to be set up)'
+        required: false
+        default: false
+        type: boolean
 
 env:
   REGISTRY: ghcr.io
